crates/forge_main/src/domain/snapshots/forge_main__domain__context__tests__update_image_tool_calls_no_tool_results.snap
---
source: crates/forge_main/src/domain/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
  - text:
      role: User
      content: User message
  - text:
      role: Assistant
      content: Assistant message
