crates/forge_main/src/domain/snapshots/forge_main__domain__context__tests__update_image_tool_calls_preserves_error_flag.snap
---
source: crates/forge_main/src/domain/context.rs
expression: actual
---
messages:
  - tool:
      name: error_tool
      call_id: call1
      output:
        is_error: true
        values:
          - text: "[The image with ID 0 will be sent as an attachment in the next message]"
  - text:
      role: User
      content: "[Here is the image attachment for ID 0]"
  - image:
      url: "data:image/png;base64,test123"
      mime_type: image/png
